--- a/style.css
+++ b/style.css
@@ -1,45 +1,89 @@
 #containeur{
     display:flex;   
-    width:90%;
+    width: 95%;
     margin: 2%;   
     justify-content: space-between;
 }
 
 #containeur div {
-    border:1px red solid;     min-height: 200px;
-    margin: 2%;
+    border:1px red solid; margin: 2%; width: 95%
+}
+
+header{
+  border: 1px red solid; min-height: 30px; margin: 2%;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav{
+  border: 1px red solid; min-width: 50%; margin: 1%;
+}
+
+ul{
+  list-style: none;
+  display: flex;
+}
+
+li{
+  margin-left: 3%
+}
+
+#recherche{
+  border: 1px red solid; margin: 2%;
+  display: flex;
+  flex-direction: column;
 }
 
 #fenetre{    flex:3; }
 #populaires{    flex:1;}
-
-#fenetre{
-    display: block;
-}
-
-#fenetre2{
-  display: block;
-  display: flex;
-  flexwrap: wrap;
-  justify-content: space-between
-}
 
 #hebergements .carte{
     width: 28%;
 }
 
 #fenetre2 .photo{
-  width:28%
+  display: flex;
+  flex-wrap: column wrap;
+  width: 90%;
+  height: 100px;
 }
 
 #hebergements{
     display: flex;
-  flex-wrap: wrap;
+    flex-wrap: wrap;
+    height: 80%;
+    padding: 0%
 }
 
-section{
-  flex-direction: column-reverse
+#activites{
+  border: 1px red solid; margin: 2%; display: flex; flex-direction: column
 }
 
+#fenetre3{
+  border: 1px red solid; margin: 2%; display: flex
+}
 
+#fenetre3 .image{
+  border: 1px red solid; margin: 2%, display: flex; width: 28%; padding: 7%
+}
+ 
+footer{
+  border: 1px red solid; display: flex; padding: 0%
+}
+
+#propos{
+  display: flex; flex-direction: column; padding: 0%
+}
+
+#qualite{
+  display: flex; flex-direction: column; padding: 0%
+}
+
+#assistance{
+  display:flex; flex-direction: column; padding: 0%
+}
+
+#haut{
+  display: flex; justify-content: space-between
+}
 
